<resources>
    <string name="app_name">Project_test</string>
    <string name="term_policy">Term of policy</string>
    <string name="policy_text">Any sites or services that collect data from users.Trace users With analytics or ads that need a privacy policy you will have to Ensure that the Privacy Policy meets the standards of the Protection Regulation General data \n\n 1-What information do you collect \n 2- How to collect information \n 3- How to save and protect information \n\n Any sites or services that collect data from users.Trace users With analytics or ads that need a privacy policy you will have to Ensure that the Privacy Policy meets the standards of the Protection Regulation General data   </string>
    <string name="btn_continue">continue</string>
    <string name="gree_term">I agree with this term</string>
    <string name="make_comfort">make comfort</string>
    <string name="for_you">for you</string>
    <string name="login">LogIn</string>
    <string name="create_account">Create account</string>
    <string name="wlcome_in_tgas">welcome in TGAS Application</string>
    <string name="how_to_use_app">How to use App</string>
    <string name="or_show_this_video">Or Show this video</string>
    <string name="skip">Skip</string>
    <string name="tgas" translatable="false">TGAS</string>
    <string name="open" translatable="false">open</string>
    <string name="close" translatable="false">close</string>
    <string name="gaza" translatable="false">GAZA</string>
    <string name="khanyonis" translatable="false">KhanYonis</string>
    <string name="deirbalah" translatable="false">Deir-Balah</string>
    <string name="rafah" translatable="false">Rafah</string>
    <string name="nuseirat" translatable="false">Nuseirat</string>
    <string name="northgaza" translatable="false">North Gaza</string>
    <string name="southgaza" translatable="false">South Gaza</string>
    <string name="people_voted" translatable="false">%d people voted</string>
    <string name="you_must_fill_all_the_field" translatable="false">You must fill all the field</string>
    <string name="select_the_service_you_want" translatable="false">Select the service you want</string>
    <string name="buy_one" translatable="false">Buy one</string>
    <string name="fill_one" translatable="false">fill one</string>
    <string name="select_the_size" translatable="false">select the size</string>
    <string name="address" translatable="false">Address</string>
    <string name="phone_number" translatable="false">phone number</string>
    <string name="price" translatable="false">price</string>
    <string name="you_paid_for_company1_100_at_10_1_2020" translatable="false">You paid for %s %d$ at %l</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

</resources>