<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_background"

    tools:context=".view.activities.user.MainActivity">


    <ImageView
        android:id="@+id/image_mainscreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:paddingBottom="@dimen/padding_8"
        android:src="@drawable/image_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tgas"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_25"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/image_mainscreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_60"
        android:gravity="center"
        android:padding="@dimen/padding_8"
        android:text="@string/make_comfort"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_20"
        app:layout_constraintEnd_toStartOf="@+id/text2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="@dimen/width_text_view"
        android:layout_height="@dimen/height_text_view"
        android:background="@drawable/ic_round_background"
        android:gravity="center"
        android:text="@string/for_you"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/txt_change_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_change_password"
        app:layout_constraintTop_toBottomOf="@id/image_mainscreen" />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginEnd="@dimen/margin_16"
        android:backgroundTint="@color/yellow_background"
        android:padding="@dimen/padding_10"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_16"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/text2" />

    <Button
        android:id="@+id/btn_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:backgroundTint="@color/yellow_background"
        android:padding="@dimen/padding_10"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_16"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>