<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_background"
    tools:context=".user.GuideActivity">

    <ImageView
        android:id="@+id/welcome_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/welcome_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:gravity="center"
        android:text="@string/wlcome_in_tgas"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_16"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_16"
        android:background="@drawable/linear_shape_guide"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:gravity="center"
            android:text="@string/how_to_use_app"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="@dimen/viewpager_width"
            android:layout_height="@dimen/viewpager_height"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_8">

        </androidx.viewpager.widget.ViewPager>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout_guide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabBackground="@drawable/tab_selector"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_2"
            android:layout_marginStart="@dimen/margin_40"
            android:layout_marginEnd="@dimen/margin_40"
            android:background="@android:color/darker_gray" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_10"
            android:adjustViewBounds="true"
            android:scaleType="center"
            android:src="@drawable/image_video" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/or_show_this_video"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_16" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/margin_20"
            android:backgroundTint="@color/yellow_background"
            android:text="@string/skip"
            android:textAllCaps="false"
            android:textSize="@dimen/margin_16" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>